# testbook

./: .dockerignore  .gitattributes  .gitignore  .markdown-link-check.json  .markdownlint.json  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  .python-version  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FAQ.md  LICENSE  Makefile  QUICKSTART.md  README.md  READY_TO_COMMIT.md  RELEASE_NOTES_v1.1.md  START_HERE.md  TEST_RESULTS_SUMMARY.txt  WHICH_START_SCRIPT.md  course-restructure-backup.md  docker-compose.yml  justfile  lighthouserc.js  package-lock.json  pyproject.toml  reset-database.bat  reset-database.ps1  reset-database.sh  run-all-tests.sh  setup_images.py  start-dev.bat  start-dev.sh  start.bat  start.sh  test-commit-hook.md  (+2 more)
.cursor/: settings.json
.devcontainer/: Dockerfile.dev  README.md  devcontainer.json  docker-compose.devcontainer.override.yml  post-create.sh  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
backend/: .coveragerc  .flake8  auth.py  database.py  env.example  logger.py  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  schemas.py  seed.py
docs/: INDEX.md  ROADMAP.md  VERSION_HISTORY.md
frontend/: .eslintrc.json  .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
labs/: LAB_01_Your_First_Test.md  LAB_02.5_Understanding_Fixtures.md  LAB_02_Testing_Real_Functions.md  LAB_03_Testing_API_Endpoints.md  LAB_04B_Advanced_E2E_Python.md  LAB_04_E2E_Testing_JavaScript.md  README.md  (+7 more)
(+262 files in other folders)
