[project]
name = "testbook"
version = "1.0.0"
description = "A social media app for testing practice"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.35",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "pydantic[email]==2.9.2",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart==0.0.12",
    "pillow==10.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

